Laposta app tags and footer changes

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -524,7 +524,7 @@
                                                               style="font-size:0;padding:0;word-break:break-word">
                                                               <div
                                                                 style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                                                <lp-multiline> [INTROTEXT] DICTATOR richt zich op het
+                                                                <lp-multiline lp-label="Intro tekstblok"> [INTROTEXT] DICTATOR richt zich op het
                                                                   ontwikkelen van betrouwbare oplossingen voor
                                                                   deursluit-, opvang-, aandrijf- en gasveertechniek. Met
                                                                   vijf productievestigingen in Europa en een wereldwijd
@@ -575,7 +575,7 @@
                                                           class="mj-full-width-mobile">
                                                           <tbody>
                                                             <tr>
-                                                              <td style="width:700px" class="mj-full-width-mobile"> <img
+                                                              <td style="width:700px" class="mj-full-width-mobile"> <img lp-edit
                                                                   alt src="images/I4003_2153_122_2405_79_239_30_297.png"
                                                                   style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
                                                                   width="700" height="auto"> </td>
@@ -749,7 +749,7 @@
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:40px;font-weight:900;line-height:48px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h1
                                         style="font-family:Mulish,Arial;font-size:40px;font-weight:900;line-height:48px;text-transform:uppercase">
-                                        <lp-singleline>H1 titel</lp-singleline> </h1>
+                                        <lp-singleline lp-label="H1 titel">H1 titel</lp-singleline> </h1>
                                     </div>
                                   </td>
                                 </tr>
@@ -789,7 +789,7 @@
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
                                         style="font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
-                                        <lp-singleline> H2 titel</lp-singleline> </h2>
+                                        <lp-singleline lp-label="H2 titel"> H2 titel</lp-singleline> </h2>
                                     </div>
                                   </td>
                                 </tr>
@@ -2739,7 +2739,7 @@
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <div
                                                             style="color:#FB6B37;font-family:Mulish,Arial;font-size:20px;font-weight:900;line-height:24px;text-align:left;text-decoration:none">
-                                                            <lp-singleline> CONTACTGEGEVENS</lp-singleline> </div>
+                                                            <lp-singleline lp-label="Titel"> CONTACTGEGEVENS</lp-singleline> </div>
                                                         </td>
                                                       </tr>
                                                     </tbody>
@@ -2770,8 +2770,8 @@
                                   <tbody>
                                     <tr>
                                       <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
-                                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:bottom;width:326px;" ><![endif]-->
-                                        <div class="mj-column-px-326 mj-outlook-group-fix"
+                                        <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:bottom;width:318px;" ><![endif]-->
+                                        <div class="mj-column-px-318 mj-outlook-group-fix"
                                           style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:bottom;width:100%">
                                           <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                             width="100%">
@@ -2786,9 +2786,8 @@
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <div
                                                             style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                                            <lp-multiline> Florijn 13, 8305 BR Emmeloord
-                                                              <br/>
-                                                              +31 (0)527 61 34 56 | info@dictator.nl</lp-multiline> </div>
+                                                            <lp-multiline lp-label="Tekstblok"> Florijn 13, 8305 BR Emmeloord<br>+31 (0)527
+                                                              61 34 56 | info@dictator.nl</lp-multiline> </div>
                                                         </td>
                                                       </tr>
                                                     </tbody>
@@ -2798,8 +2797,8 @@
                                             </tbody>
                                           </table>
                                         </div>
-                                        <!--[if mso | IE]></td><td class="" style="vertical-align:bottom;width:326px;" ><![endif]-->
-                                        <div class="mj-column-px-326 mj-outlook-group-fix"
+                                        <!--[if mso | IE]></td><td class="" style="vertical-align:bottom;width:16px;" ><![endif]-->
+                                        <div class="mj-column-px-16 mj-outlook-group-fix"
                                           style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:bottom;width:100%">
                                           <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                             width="100%">
@@ -2810,13 +2809,59 @@
                                                     width="100%">
                                                     <tbody>
                                                       <tr>
-                                                        <td align="left"
+                                                        <td style="font-size:0;padding:0;word-break:break-word">
+                                                          <div style="height:16px;line-height:16px">&#8202;</div>
+                                                        </td>
+                                                      </tr>
+                                                    </tbody>
+                                                  </table>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </div>
+                                        <!--[if mso | IE]></td><td class="" style="vertical-align:bottom;width:318px;" ><![endif]-->
+                                        <div class="mj-column-px-318 mj-outlook-group-fix"
+                                          style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:bottom;width:100%">
+                                          <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                            width="100%">
+                                            <tbody>
+                                              <tr>
+                                                <td style="padding:0;vertical-align:bottom">
+                                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                                    width="100%">
+                                                    <tbody>
+                                                      <tr>
+                                                        <td align="right"
                                                           style="font-size:0;padding:0;word-break:break-word">
-                                                          <div
-                                                            style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                                            <lp-multiline> Florijn 13, 8305 BR Emmeloord
-                                                              <br/>
-                                                              +31 (0)527 61 34 56 | info@dictator.nl</lp-multiline> </div>
+                                                          <table cellpadding="0" cellspacing="0" role="presentation"
+                                                            width="136" border="0"
+                                                            style="border:none;color:#000;font-family:Ubuntu,Helvetica,Arial,sans-serif;font-size:13px;line-height:22px;table-layout:auto;width:136px">
+                                                            <tr>
+                                                              <td align="right" width="28"
+                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                    src="images/I2001_1532_4014_2404_30_297.png" lp-edit
+                                                                    alt align="right" width="28px"></a> </td>
+                                                              <td align="right" width="8"
+                                                                style="max-width:8px;width:8px">&nbsp;</td>
+                                                              <td align="right" width="28"
+                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                    src="images/I2001_1532_4014_2437_30_297.png" lp-edit
+                                                                    alt align="right" width="28px"></a> </td>
+                                                              <td align="right" width="8"
+                                                                style="max-width:8px;width:8px">&nbsp;</td>
+                                                              <td align="right" width="28"
+                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                    src="images/I2001_1532_4014_2477_30_297.png" lp-edit
+                                                                    alt align="right" width="28px"></a> </td>
+                                                              <td align="right" width="8"
+                                                                style="max-width:8px;width:8px">&nbsp;</td>
+                                                              <td align="right" width="28"
+                                                                style="max-width:28px;width:28px"> <a href="#"><img
+                                                                    src="images/I2001_1532_4014_2523_30_297.png" lp-edit
+                                                                    alt align="right" width="28px"></a> </td>
+                                                            </tr>
+                                                          </table>
                                                         </td>
                                                       </tr>
                                                     </tbody>
@@ -2907,7 +2952,7 @@
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <div
                                                             style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                                            <lp-multiline> Bezoek onze website voor meer informatie <br>
+                                                            <lp-multiline lp-label="Tekstblok"> Bezoek onze website voor meer informatie <br>
                                                               <a href="https://www.dictator.nl"
                                                                 style="color:#FB6B37;font-weight:700;text-decoration:none">www.dictator.nl</a>
                                                             </lp-multiline> </div>
@@ -2957,7 +3002,7 @@
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <div
                                                             style="color:#afbdda;font-family:Mulish,Arial;font-size:12px;font-weight:400;line-height:16px;text-align:center;text-decoration:none">
-                                                            <lp-multiline> Deze e-mail is verstuurd aan {{email}}. <br>
+                                                            <lp-multiline lp-label="Tekstblok"> Deze e-mail is verstuurd aan {{email}}. <br>
                                                               Als je geen e-mails meer wilt ontvangen dan kun je je <lp-unsubscribe>hier
                                                               afmelden.</lp-unsubscribe><br> Je kunt ook je <lp-editprofile>gegevens inzien en wijzigen</lp-editprofile>.
                                                               <br> Voeg {{from_email}} toe aan je adresboek voor een betere ontvangst.</lp-multiline> </div>
