--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -2841,25 +2841,25 @@
                                                               <td align="right" width="28"
                                                                 style="max-width:28px;width:28px"> <a href="#"><img
                                                                     src="images/I2001_1532_4014_2404_30_297.png" lp-edit
-                                                                    alt align="right" width="28px"></a> </td>
+                                                                    alt align="right" width="28"></a> </td>
                                                               <td align="right" width="8"
                                                                 style="max-width:8px;width:8px">&nbsp;</td>
                                                               <td align="right" width="28"
                                                                 style="max-width:28px;width:28px"> <a href="#"><img
                                                                     src="images/I2001_1532_4014_2437_30_297.png" lp-edit
-                                                                    alt align="right" width="28px"></a> </td>
+                                                                    alt align="right" width="28"></a> </td>
                                                               <td align="right" width="8"
                                                                 style="max-width:8px;width:8px">&nbsp;</td>
                                                               <td align="right" width="28"
                                                                 style="max-width:28px;width:28px"> <a href="#"><img
                                                                     src="images/I2001_1532_4014_2477_30_297.png" lp-edit
-                                                                    alt align="right" width="28px"></a> </td>
+                                                                    alt align="right" width="28"></a> </td>
                                                               <td align="right" width="8"
                                                                 style="max-width:8px;width:8px">&nbsp;</td>
                                                               <td align="right" width="28"
                                                                 style="max-width:28px;width:28px"> <a href="#"><img
                                                                     src="images/I2001_1532_4014_2523_30_297.png" lp-edit
-                                                                    alt align="right" width="28px"></a> </td>
+                                                                    alt align="right" width="28"></a> </td>
                                                             </tr>
                                                           </table>
                                                         </td>
