--- a/Default/default.html
+++ b/Default/default.html
@@ -56,20 +56,6 @@
       </style>
     <![endif]-->
   <style type="text/css">
-    .lp-toc img {
-      height: 24px !important
-    }
-
-    .lp-toc-link, .lp-toc-link a {
-      color:#ff00ff;
-      font-size: inherit !important;
-      font-family: inherit !important;
-      font-weight: inherit !important;
-      line-height: inherit !important;
-      text-align:left;
-      text-decoration:none
-    }
-
     @media only screen and (min-width:700px) {
       .mj-column-per-100 {
         max-width: 100%;
@@ -222,6 +208,14 @@
       color: #f0f !important
     }
 
+    .cta-button a {
+      color: #fff !important
+    }
+
+    .cta-button.text-dark a {
+      color: #212529 !important
+    }
+
     a[x-apple-data-detectors] {
       color: #f0f !important;
       font-family: inherit !important;
@@ -240,7 +234,7 @@
     }
 
     .cta-button td a[x-apple-data-detectors] {
-      color: #f0f !important;
+      color: #fff !important;
       font-family: inherit !important;
       font-size: inherit !important;
       font-weight: inherit !important;
@@ -249,11 +243,25 @@
 
     #MessageViewBody .cta-button td a,
     u+#body .cta-button td a {
-      color: #f0f !important;
+      color: #fff !important;
       font-family: inherit !important;
       font-size: inherit !important;
       font-weight: inherit !important;
       line-height: inherit !important
+    }
+
+    .lp-toc img {
+      height: 24px !important
+    }
+
+    .lp-toc-link, .lp-toc-link a {
+      color:#ff00ff;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      text-align:left;
+      text-decoration:none
     }
   </style>
 </head>
@@ -444,8 +452,7 @@
           </tbody>
         </table>
       </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-    </lp-layout>
-    <lp-layout lp-label="Inhoudsopgave">
+    </lp-layout><lp-layout lp-label="Inhoudsopgave">
       <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
       <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -1598,7 +1605,7 @@
                                           </td>
                                         </tr>
                                         <tr>
-                                          <td align="center" class="cta-button"
+                                          <td align="center" class="cta-button text-dark"
                                             style="font-size:0;padding:0;word-break:break-word">
                                             <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                               style="border-collapse:separate;line-height:100%">
