--- a/Default/default.html
+++ b/Default/default.html
@@ -205,7 +205,7 @@
     }
 
     a {
-      color: #f0f !important
+      color: #ff00ff !important
     }
 
     .cta-button a {
@@ -217,7 +217,7 @@
     }
 
     a[x-apple-data-detectors] {
-      color: #f0f !important;
+      color: #ff00ff !important;
       font-family: inherit !important;
       font-size: inherit !important;
       font-weight: inherit !important;
@@ -226,7 +226,7 @@
 
     #MessageViewBody a,
     u+#body a {
-      color: #f0f !important;
+      color: #ff00ff !important;
       font-family: inherit !important;
       font-size: inherit !important;
       font-weight: inherit !important;
@@ -467,7 +467,32 @@
                     <tbody>
                       <tr>
                         <td style="padding:0;vertical-align:top">
-                          <lp-toc lp-bullet-padding-right="16" lp-bullet-padding-left="1" lp-bullet="https://jmacare.github.io/mjml/Laposta/assets/lp-toc.png"></lp-toc>
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                            <tbody>
+                              <tr>
+                                <td align="left" style="font-size:0;padding:0 0 16px;word-break:break-word">
+                                  <div
+                                    style="color:#212529;font-family:Arial;font-size:28px;font-weight:700;line-height:34px;text-align:left;text-decoration:none">
+                                    <h3 style="font-family:Arial;font-size:28px;font-weight:700;line-height:34px">
+                                      <lp-singleline lp-label="Titel"> Inhoudsopgave</lp-singleline> </h3>
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align="left" style="font-size:0;padding:0 0 4px;word-break:break-word">
+                                  <div class="lp-toc"
+                                    style="color:#212529;font-family:Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
+                                    <lp-toc lp-bullet-padding-right="16" lp-bullet-padding-left="1" lp-bullet="https://jmacare.github.io/mjml/Laposta/assets/lp-toc.png"></lp-toc>  
+                                  </div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td style="font-size:0;padding:0;word-break:break-word">
+                                  <div style="height:24px;line-height:24px">&#8202;</div>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
                         </td>
                       </tr>
                     </tbody>
@@ -552,7 +577,7 @@
                                         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                                         ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                                        voluptate velit esse cillum dolore eu fugiat nulla pariatur.</lp-multiline>
+                                        voluptate velit esse cillum <a href="#">dolore eu fugiat</a> nulla pariatur.</lp-multiline>
                                     </div>
                                   </td>
                                 </tr>
