--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -1082,9 +1082,9 @@
                         <tr>
                           <td style="padding:0;vertical-align:top">
                             <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
-                              <tbody> <lp-video lp-label="Video"
-                                  lp-video-url="https://www.youtube.com/watch?v=X9uxMaC6aWU" lp-video-width="652"
-                                  lp-video-height="300"> </lp-video> </tbody>
+                              <tbody> 
+                                <lp-video lp-width="652" lp-label="Video" lp-src="https://www.youtube.com/watch?v=X9uxMaC6aWU" lp-resizable lp-max-width="652" lp-min-width="200"/>
+                              </tbody>
                             </table>
                           </td>
                         </tr>
