lp-layout label colored textblocks

--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -1969,7 +1969,7 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
-      <lp-layout lp-label="Gekleurd tekstblok - Primair">
+      <lp-layout lp-label="Gekleurd tekstblok - Blauw">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -2069,7 +2069,7 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
-      <lp-layout lp-label="Gekleurd blok met button - Primair">
+      <lp-layout lp-label="Gekleurd blok met button - Blauw">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
