--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -271,6 +271,14 @@
         margin: 0 !important;
         width: 100% !important
       }
+
+      .footer-copyright {
+        text-align: left !important;
+      }
+
+      .socials {
+        text-align: left !important;
+      }
     }
   </style>
 </head>
@@ -2406,28 +2414,40 @@
                                             width="100%">
                                             <tbody>
                                               <tr>
-                                                <td align="right" style="font-size:0;padding:0;word-break:break-word">
+                                                <td class="socials" align="right" style="font-size:0;padding:0;word-break:break-word">
                                                   <table cellpadding="0" cellspacing="0" width="96" border="0"
                                                     style="border:0;color:#000;font-family:Ubuntu,Helvetica,Arial,sans-serif;font-size:13px;line-height:22px;table-layout:auto;width:96px">
                                                     <tr>
                                                       <td width="16px" align="right"
                                                         style="height:16px;max-width:16px;vertical-align:middle;width:16px">
-                                                        <img src="./images/facebook.png" alt="Facebook" height="16"
-                                                          style="display:inline-block;vertical-align:middle"> </td>
+                                                        <lp-singleline lp-label="Facebook">
+                                                          <a href="https://www.facebook.com/smellinkgroup/">
+                                                            <img src="./images/facebook.png" alt="Facebook" height="16" style="display:inline-block;vertical-align:middle"> 
+                                                          </a>
+                                                        </lp-singleline>
+                                                      </td>
                                                       <td width="24px" align="right"
                                                         style="height:16px;max-width:24px;vertical-align:middle;width:24px">
                                                         &nbsp;</td>
                                                       <td width="16px" align="right"
                                                         style="height:16px;max-width:16px;vertical-align:middle;width:16px">
-                                                        <img src="./images/instagram.png" alt="Facebook" height="16"
-                                                          style="display:inline-block;vertical-align:middle"> </td>
+                                                        <lp-singleline lp-label="Instagram">
+                                                          <a href="https://www.instagram.com/explore/locations/635313783313735/smellink-group-bv/">
+                                                            <img src="./images/instagram.png" alt="Instagram" height="16" style="display:inline-block;vertical-align:middle"> 
+                                                          </a>
+                                                        </lp-singleline>
+                                                      </td>
                                                       <td width="24px" align="right"
                                                         style="height:16px;max-width:24px;vertical-align:middle;width:24px">
                                                         &nbsp;</td>
                                                       <td width="16px" align="right"
                                                         style="height:16px;max-width:16px;vertical-align:middle;width:16px">
-                                                        <img src="./images/linkedin.png" alt="Facebook" height="16"
-                                                          style="display:inline-block;vertical-align:middle"> </td>
+                                                        <lp-singleline lp-label="Linkedin">
+                                                          <a href="https://www.linkedin.com/company/smellink-group-bv">
+                                                            <img src="./images/linkedin.png" alt="Linkedin" height="16" style="display:inline-block;vertical-align:middle">
+                                                          </a>
+                                                        </lp-singleline>
+                                                      </td>
                                                     </tr>
                                                   </table>
                                                 </td>
@@ -2515,8 +2535,7 @@
                                               <tr>
                                                 <td align="right"
                                                   style="font-size:0;padding:16px 0 0;word-break:break-word">
-                                                  <div
-                                                    style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:right;text-decoration:none">
+                                                  <div class="footer-copyright" style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:right;text-decoration:none">
                                                     <lp-multiline lp-label="Copyright"> © Smellink Group BV</lp-multiline> </div>
                                                 </td>
                                               </tr>
