--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -523,7 +523,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:32px;font-weight:600;line-height:40px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h1
-                                        style="font-family:Barlow;font-size:32px;font-weight:600;line-height:40px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:32px;font-weight:600;line-height:40px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel">[H1] titel - eenmalig gebruiken</lp-singleline>
                                       </h1>
                                     </div>
@@ -564,7 +564,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
-                                        style="font-family:Barlow;font-size:28px;font-weight:600;line-height:34px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel">[H2] Substitel</lp-singleline> </h2>
                                     </div>
                                   </td>
@@ -604,7 +604,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
@@ -656,7 +656,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
@@ -723,7 +723,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
@@ -782,7 +782,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
@@ -890,7 +890,7 @@
                                   <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h4>
                                     </div>
                                   </td>
@@ -991,7 +991,7 @@
                                   <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h4>
                                     </div>
                                   </td>
@@ -1185,7 +1185,7 @@
                                   <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1242,7 +1242,7 @@
                                   <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1294,7 +1294,7 @@
                                   <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1369,7 +1369,7 @@
                                   <td align="left" style="font-size:0;padding:0 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1454,7 +1454,7 @@
                                   <td align="left" style="font-size:0;padding:16px 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1526,7 +1526,7 @@
                                   <td align="left" style="font-size:0;padding:16px 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1593,7 +1593,7 @@
                                   <td align="left" style="font-size:0;padding:16px 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1683,7 +1683,7 @@
                                   <td align="left" style="font-size:0;padding:16px 0 8px;word-break:break-word">
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px;text-align:left;text-decoration:none">
-                                      <h4 style="font-family:Barlow;font-size:20px;font-weight:700;line-height:28px">
+                                      <h4 style="font-family:Barlow,Arial;font-size:20px;font-weight:700;line-height:28px">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h4>
                                     </div>
@@ -1999,7 +1999,7 @@
                                     <div
                                       style="color:#f8f9fa;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h3>
                                     </div>
@@ -2049,7 +2049,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h3>
                                     </div>
@@ -2099,7 +2099,7 @@
                                     <div
                                       style="color:#f8f9fa;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:center;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Gekleurd tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
@@ -2167,7 +2167,7 @@
                                     <div
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:center;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Barlow;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
+                                        style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Gekleurd tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
