--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -186,7 +186,7 @@
       color: #233971 !important
     }
 
-    .cta-button a, .webversion-link a, .footer-links a {
+    .cta-button a, .webversion-link a, .footer-links, .footer-links a, .footer-links a:-webkit-any-link, .footer-links a:link {
       color: #fff !important
     }
 
@@ -2367,11 +2367,17 @@
                                               <tr>
                                                 <td align="left"
                                                   style="font-size:0;padding:16px 0 0;word-break:break-word">
-                                                  <div
-                                                    style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                                    <lp-multiline lp-label="Contactgegevens"> Smellink Group BV De
-                                                      Dennen 13<br> 7491 HH Delden<br> The Netherlands<br> <br> + 31
-                                                      (0)74 3771000<br> info@smellink.nl </lp-multiline> </div>
+                                                  <div class="footer-links" style="color:#fff;font-family:Barlow,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
+                                                    <lp-multiline lp-label="Contactgegevens"> 
+                                                      Smellink Group BV<br>
+                                                      De Dennen 13<br> 
+                                                      7491 HH Delden<br>
+                                                      The Netherlands<br>
+                                                      <br> 
+                                                      + 31 (0)74 3771000<br> 
+                                                      info@smellink.nl 
+                                                    </lp-multiline> 
+                                                  </div>
                                                 </td>
                                               </tr>
                                             </tbody>
