--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -542,7 +542,49 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
+
       <lp-layout lp-label="[H2] Subtitel">
+        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+        <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
+            style="background:#fff;background-color:#fff;width:100%">
+            <tbody>
+              <tr>
+                <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
+                  <div class="mj-column-per-100 mj-outlook-group-fix"
+                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                      <tbody>
+                        <tr>
+                          <td style="padding:0;vertical-align:middle">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                    <div
+                                      style="color:#233971;font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
+                                      <h2
+                                        style="font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-transform:uppercase">
+                                        <lp-singleline lp-label="Titel" lp-toc>[H2] Substitel</lp-singleline> </h2>
+                                    </div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+      </lp-layout>
+
+      <lp-layout lp-label="[H2] Subtitel - Niet in inhoudsopgave">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -582,6 +624,7 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
+
       <lp-layout lp-label="Tekstblok">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
@@ -605,7 +648,7 @@
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
                                         style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
+                                        <lp-singleline lp-label="Titel" lp-toc> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
                                 </tr>
@@ -657,7 +700,7 @@
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
                                         style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
+                                        <lp-singleline lp-label="Titel" lp-toc> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
                                 </tr>
@@ -724,7 +767,7 @@
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
                                         style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
+                                        <lp-singleline lp-label="Titel" lp-toc> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
                                 </tr>
@@ -783,7 +826,7 @@
                                       style="color:#233971;font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
                                         style="font-family:Barlow,Arial;font-size:24px;font-weight:600;line-height:28px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel"> Subtitel tekstblok</lp-singleline> </h3>
+                                        <lp-singleline lp-label="Titel" lp-toc> Subtitel tekstblok</lp-singleline> </h3>
                                     </div>
                                   </td>
                                 </tr>
