Substitel > subtitel. Added preview text

--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -566,7 +566,7 @@
                                       style="color:#233971;font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
                                         style="font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel" lp-toc>[H2] Substitel</lp-singleline> </h2>
+                                        <lp-singleline lp-label="Titel" lp-toc>[H2] Subtitel</lp-singleline> </h2>
                                     </div>
                                   </td>
                                 </tr>
@@ -607,7 +607,7 @@
                                       style="color:#233971;font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
                                         style="font-family:Barlow,Arial;font-size:28px;font-weight:600;line-height:34px;text-transform:uppercase">
-                                        <lp-singleline lp-label="Titel">[H2] Substitel</lp-singleline> </h2>
+                                        <lp-singleline lp-label="Titel">[H2] Subtitel - Niet in inhoudsopgave</lp-singleline> </h2>
                                     </div>
                                   </td>
                                 </tr>
